# hiq

./: main.py  pyproject.toml  registration.toml
hiq/lib/: client.py  item.py  manager.py  partition.py  store.py  util.py
hiq/lib/tests/: store.py
hiq/srv/: shard_allocator.py
