[tool.poetry]
name = "hiq"
version = "0.1.0"
description = "A client-based distributed priority queue"
authors = ["abizer <abizer@abizer.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.srv.dependencies]
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
